opencrx-v6 (#152)